Fix leak of allocations in OOP memory logging.

Previously at process exit all allocations and backtraces would be leaked
due to an errant release() call on the pointer.

Bug: 765863
Change-Id: Iff4c320e40e58adb417e41a49ea2199a2e5d48ba
Reviewed-on: https://chromium-review.googlesource.com/675569
Reviewed-by: Erik Chen <erikchen@chromium.org>
Commit-Queue: Brett Wilson <brettw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503208}
Former-commit-id: be39ab37dcca3e7675cd2eea6002ae11ee06688f